I fixed an issue with logging in causing an error when login details entered are wrong. I have updated the generateUIForPuzzle to remove existing grid so I can now override one game on top of another. I added a function in the puzzleLogic to remove some when there is too much overlap as it was breaking the game. Lastly, I changed the game background.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,6 @@ body{
 }
 
 body{
-    background-color: chocolate;
+    background-color: whitesmoke;
 }
 
